// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventDetailCount component renders correctly 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "marginRight": 5,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontSize": 12,
          "marginRight": 3,
        },
        Object {
          "color": "rgba(255,255,255, 0.60)",
        },
      ]
    }
  >
    1
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontSize": 12,
        },
        Object {
          "color": "rgba(255,255,255, 0.60)",
        },
      ]
    }
  >
    Likes
  </Text>
</View>
`;

exports[`EventDetailCount component renders correctly with null data 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "marginRight": 5,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontSize": 12,
          "marginRight": 3,
        },
        Object {
          "color": "rgba(255,255,255, 0.60)",
        },
      ]
    }
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontSize": 12,
        },
        Object {
          "color": "rgba(255,255,255, 0.60)",
        },
      ]
    }
  />
</View>
`;
